--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: ReadmeUpdate
 on:
   push:
     branches:
@@ -9,7 +9,7 @@ permissions:
   contents: write
 jobs:
   npm:
-    if: ${{!startsWith(github.event.head_commit.message, '[RELEASE]') || !startsWith(github.event.head_commit.message, '[GIF]') }}
+    if: ${{!startsWith(github.event.head_commit.message, '[RELEASE]') || !startsWith(github.event.head_commit.message, '[README]') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
