--- a/.github/workflows/updateReadme.yml
+++ b/.github/workflows/updateReadme.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 jobs:
   update_readme:
-    if: ${{!startsWith(github.event.head_commit.message, '[RELEASE]') || !startsWith(github.event.head_commit.message, '[README]') }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Add this condition
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
