--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -1,15 +1,14 @@
-name: Publish
+  name: Publish
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+  workflow_run:
+    workflows: ["ReadmeUpdate"]
+    types:
+      - completed
 permissions:
   contents: write
 jobs:
   npm:
-    if: ${{!startsWith(github.event.head_commit.message, '[RELEASE]') || !startsWith(github.event.head_commit.message, '[README]') }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Add this condition
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
