--- a/.github/workflows/updateReadme.yml
+++ b/.github/workflows/updateReadme.yml
@@ -1,15 +1,16 @@
 name: ReadmeUpdate
 # Only trigger, when the build workflow succeeded
 on:
-  workflow_run:
-    workflows: ["Publish"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 permissions:
   contents: write
 jobs:
   update_readme:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}  # Add this condition
+    if: ${{!startsWith(github.event.head_commit.message, '[RELEASE]') || !startsWith(github.event.head_commit.message, '[README]') }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
@@ -26,8 +27,8 @@ jobs:
           npx embedme README.md
       - name: Commit and push if it was changed
         run: |
-          git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
+          git config --global user.name 'Firebolt Casters'
+          git config --global user.email 'nilsbaumgartner@live.de'
           git add -A
-          git diff --quiet && git diff --staged --quiet || git commit -m "[README] Updated README"
+          git commit -m "[README] Updated README"
           git push
